# Capstone-Project-Lemon-Health-Monitor

./: .gitignore  README.md
Phase B/Model Training/: main.py  pyproject.toml  train_leaf_detection.py
Phase B/Model Training/inference/: Dockerfile  inference_matplotlib.ipynb  minimalist_inference.py
Phase B/Model Training/inference/app/: inference_matplotlib.ipynb  requirements.txt  settings.py
Phase B/Model Training/inference/app/db/: db.py  models.py
Phase B/Model Training/inference/app/models/: analysis.py
Phase B/Model Training/inference/app/services/: analysis_worker.py
Phase B/Model Training/inference/app/storage/: minio_storage_client.py  storage_service.py
Phase B/Model Training/inference/services/: health_analyzer.py  rabbitmq_worker.py
Phase B/Model Training/yolo_dataset_leafdetection/: data.yaml
Phase B/Model Training/yolo_dataset_leafdetection/test/labels/: LEAF_0019.txt  LEAF_0021.txt  LEAF_0032.txt  LEAF_0039.txt  LEAF_0040.txt  LEAF_0058.txt  LEAF_0060.txt  LEAF_0063.txt  LEAF_0068.txt  LEAF_0120.txt  LEAF_0122.txt  LEAF_0123.txt  LEAF_0125.txt  LEAF_0152.txt  LEAF_0158.txt  LEAF_0162.txt  LEAF_0176.txt  LEAF_0182.txt  LEAF_0183.txt  LEAF_0192.txt  LEAF_0193.txt  LEAF_0204.txt  LEAF_0231.txt  LEAF_0249.txt  LEAF_0254.txt  LEAF_0257.txt  LEAF_0270.txt  LEAF_0274.txt  LEAF_0278.txt  LEAF_0280.txt  LEAF_0283.txt  LEAF_0292.txt  LEAF_0305.txt  LEAF_0312.txt  LEAF_0317.txt  LEAF_0320.txt  LEAF_0335.txt  LEAF_0338.txt  LEAF_0347.txt  LEAF_0351.txt  (+73 more)
Phase B/Model Training/yolo_dataset_leafdetection/train/: labels.cache
Phase B/Model Training/yolo_dataset_leafdetection/train/labels/: LEAF_0009.txt  LEAF_0010.txt  LEAF_0011.txt  LEAF_0013.txt  LEAF_0014.txt  LEAF_0015.txt  LEAF_0016.txt  LEAF_0017.txt  LEAF_0018.txt  LEAF_0020.txt  LEAF_0022.txt  LEAF_0023.txt  LEAF_0024.txt  LEAF_0025.txt  LEAF_0026.txt  LEAF_0027.txt  LEAF_0028.txt  LEAF_0029.txt  LEAF_0030.txt  LEAF_0031.txt  LEAF_0033.txt  LEAF_0034.txt  LEAF_0035.txt  LEAF_0036.txt  LEAF_0037.txt  LEAF_0038.txt  LEAF_0041.txt  LEAF_0042.txt  LEAF_0043.txt  LEAF_0044.txt  LEAF_0045.txt  LEAF_0046.txt  LEAF_0047.txt  LEAF_0049.txt  LEAF_0050.txt  LEAF_0051.txt  LEAF_0052.txt  LEAF_0054.txt  LEAF_0055.txt  LEAF_0056.txt  (+863 more)
Phase B/Model Training/yolo_dataset_leafdetection/valid/: labels.cache
Phase B/Model Training/yolo_dataset_leafdetection/valid/labels/: LEAF_0012.txt  LEAF_0048.txt  LEAF_0053.txt  LEAF_0065.txt  LEAF_0067.txt  LEAF_0112.txt  LEAF_0124.txt  LEAF_0140.txt  LEAF_0142.txt  LEAF_0194.txt  LEAF_0202.txt  LEAF_0215.txt  LEAF_0227.txt  LEAF_0228.txt  LEAF_0273.txt  LEAF_0275.txt  LEAF_0276.txt  LEAF_0307.txt  LEAF_0315.txt  LEAF_0318.txt  LEAF_0326.txt  LEAF_0336.txt  LEAF_0339.txt  LEAF_0343.txt  LEAF_0374.txt  LEAF_0378.txt  LEAF_0382.txt  LEAF_0389.txt  LEAF_0397.txt  LEAF_0404.txt  LEAF_0409.txt  LEAF_0411.txt  LEAF_0417.txt  LEAF_0461.txt  LEAF_0466.txt  LEAF_0469.txt  LEAF_0470.txt  LEAF_0477.txt  LEAF_0478.txt  LEAF_0488.txt  (+72 more)
Phase B/capstone/: README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
Phase B/capstone/capstone_api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Phase B/capstone/capstone_api/app/: main.py  settings.py
Phase B/capstone/capstone_api/app/core/: dependencies.py  security.py
Phase B/capstone/capstone_api/app/crud/: analysis.py  user.py
Phase B/capstone/capstone_api/app/db/: base.py  db.py  init_db.py  models.py  session.py
Phase B/capstone/capstone_api/app/middlewares/: __init__.py  logging_middleware.py
Phase B/capstone/capstone_api/app/models/: analysis.py  auth.py  common.py  monitoring.py  plant.py  queue.py  user.py
Phase B/capstone/capstone_api/app/routes/: health_router.py
Phase B/capstone/capstone_api/app/services/: analysis_service.py  auth_service.py  camera_service.py  monitoring_service.py  plant_service.py  user_service.py
Phase B/capstone/capstone_api/app/storage/: minio_storage_client.py  storage_service.py
Phase B/capstone/capstone_api/app/utils/: jwt_validation.py  rabbitmq.py
Phase B/capstone/capstone_api/capstone_api/: __init__.py  main.py  settings.py
Phase B/capstone/capstone_api/capstone_api/core/: dependencies.py  exceptions.py
Phase B/capstone/capstone_api/capstone_api/db/: base.py  models.py
Phase B/capstone/capstone_api/capstone_api/middlewares/: logging_middleware.py
Phase B/capstone/capstone_api/capstone_api/models/: analysis.py  auth.py  camera.py  (+1 more)
Phase B/capstone/data_storage/: mydb.sqlite3
Phase B/capstone/inference/: Dockerfile  pyproject.toml
Phase B/model-training/: pyproject.toml
Phase B/model-training/efficientnet/: mergedtrainer.py
Phase B/model-training/yolo/: leafdetection_training.py
(+54 files in other folders)
