[project]
name = "model-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "polars>=1.35.2",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "requests>=2.28.1",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.66.5",
    "ultralytics>=8.3.229",
    "ultralytics-thop>=2.0.18",
]


# uncomment the lines below if you have cuda version 13 and supported nvidia graphics card

# [tool.uv.sources]
# torch = { index = "pytorch" }
# torchvision = { index = "pytorch" }

# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu130"
