[project]
name = "capstone-api"
version = "0.1.0"
description = "Lemon Tree Disease Identification API - A plant disease identification system using computer vision and LLM"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "werkzeug>=3.0.0",
    "pika>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["capstone_api"]
